[tool.poetry]
name = "poetry-git-test"
version = "0.1.0"
description = ""
authors = ["José Loarca <joseloarca97@icloud.com>"]
readme = "README.md"
packages = [{include = "poetry_git_test"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
